infra/k8s/category-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category
  template:
    metadata:
      labels:
        app: category
    spec:
      containers:
        - name: category
          image: 076161/heaven-category
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: category-srv
spec:
  selector:
    app: category
  ports:
    - name: category
      protocol: TCP
      port: 4001
      targetPort: 4001
