infra/k8s/extra-ingredient-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extra-ingredient-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: extra-ingredient
  template:
    metadata:
      labels:
        app: extra-ingredient
    spec:
      containers:
        - name: extra-ingredient
          image: 076161/heaven-extra-ingredient
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: extra-ingredient-srv
spec:
  selector:
    app: extra-ingredient
  ports:
    - name: extra-ingredient
      protocol: TCP
      port: 4002
      targetPort: 4002
