infra/k8s/ingredient-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingredient-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingredient
  template:
    metadata:
      labels:
        app: ingredient
    spec:
      containers:
        - name: ingredient
          image: 076161/heaven-ingredient
          ports:
            - containerPort: 12000
---
apiVersion: v1
kind: Service
metadata:
  name: ingredient-srv
spec:
  selector:
    app: ingredient
  ports:
    - name: ingredient
      protocol: TCP
      port: 12000
      targetPort: 12000
