infra/k8s/invoice-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice
  template:
    metadata:
      labels:
        app: invoice
    spec:
      containers:
        - name: invoice
          image: 076161/heaven-invoice
          ports:
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: invoice-srv
spec:
  selector:
    app: invoice
  ports:
    - name: invoice
      protocol: TCP
      port: 4004
      targetPort: 4004
