infra/k8s/kitchen-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchen-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitchen
  template:
    metadata:
      labels:
        app: kitchen
    spec:
      containers:
        - name: kitchen
          image: 076161/heaven-kitchen
          ports:
            - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: kitchen-srv
spec:
  selector:
    app: kitchen
  ports:
    - name: kitchen
      protocol: TCP
      port: 4005
      targetPort: 4005
