infra/k8s/option-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: option-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: option
  template:
    metadata:
      labels:
        app: option
    spec:
      containers:
        - name: option
          image: 076161/heaven-option
          ports:
            - containerPort: 4006
---
apiVersion: v1
kind: Service
metadata:
  name: option-srv
spec:
  selector:
    app: option
  ports:
    - name: option
      protocol: TCP
      port: 4006
      targetPort: 4006
