infra/k8s/option-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: option-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: option-mongo
  template:
    metadata:
      labels:
        app: option-mongo
    spec:
      containers:
        - name: option-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: option-mongo-srv
spec:
  selector:
    app: option-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
