infra/k8s/promotion-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promotion-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promotion
  template:
    metadata:
      labels:
        app: promotion
    spec:
      containers:
        - name: promotion
          image: 076161/heaven-promotion
          ports:
            - containerPort: 4008
---
apiVersion: v1
kind: Service
metadata:
  name: promotion-srv
spec:
  selector:
    app: promotion
  ports:
    - name: promotion
      protocol: TCP
      port: 4008
      targetPort: 4008
