infra/k8s/seller-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seller-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seller
  template:
    metadata:
      labels:
        app: seller
    spec:
      containers:
        - name: seller
          image: 076161/heaven-seller
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: seller-srv
spec:
  selector:
    app: seller
  ports:
    - name: seller
      protocol: TCP
      port: 5000
      targetPort: 5000
