infra/k8s/table-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: table-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: table
  template:
    metadata:
      labels:
        app: table
    spec:
      containers:
        - name: table
          image: 076161/heaven-table
          ports:
            - containerPort: 4009
---
apiVersion: v1
kind: Service
metadata:
  name: table-srv
spec:
  selector:
    app: table
  ports:
    - name: table
      protocol: TCP
      port: 4009
      targetPort: 4009
