infra/k8s/tip-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tip-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tip
  template:
    metadata:
      labels:
        app: tip
    spec:
      containers:
        - name: tip
          image: 076161/heaven-tip
          ports:
            - containerPort: 4010
---
apiVersion: v1
kind: Service
metadata:
  name: tip-srv
spec:
  selector:
    app: tip
  ports:
    - name: tip
      protocol: TCP
      port: 4010
      targetPort: 4010
