infra/k8s/waiter-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: waiter-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: waiter
  template:
    metadata:
      labels:
        app: waiter
    spec:
      containers:
        - name: waiter
          image: 076161/heaven-waiter
          ports:
            - containerPort: 4011
---
apiVersion: v1
kind: Service
metadata:
  name: waiter-srv
spec:
  selector:
    app: waiter
  ports:
    - name: waiter
      protocol: TCP
      port: 4011
      targetPort: 4011
