infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # /user'i kaldırıp gerisini alıyoruz
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /user(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /seller(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: seller-srv
                port:
                  number: 5000
          - path: /order(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-srv
                port:
                  number: 4000
          - path: /ingredient(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ingredient-srv
                port:
                  number: 12000
